Mon Jul 28 13:32:13  2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Asynch_Acceptor.cpp:
        * ace/WIN32_Asynch_IO.cpp:
          Removed compiler checks

        * ace/OS_NS_stdio.cpp:
          Don't check for Borland C++ but for ACE_HAS_NONCONST_FDOPEN

        * ace/OS_NS_stdio.inl:
          Removed workaround for Borland C++

Mon Jul 28 13:10:13  2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Global_Macros.h:
          Removed obsolete workaround for Borland C++

Mon Jul 28 13:03:13  2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ace_wchar.h:
          Removed obsolete workaround for Borland C++

Mon Jul 28 11:52:13  2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Registry.cpp:
          Don't declare a static object within a method because that
          could lead to race conditions in a multi threaded program

        * ace/ace_qt4reactor.mpc:
          Fixed bug in this file

Mon Jul 28 11:40:13  2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ETCL/ETCL_Interpreter.h:
          Doxygen fixes and made destructor virtual, this is a base class

        * ace/INET_Addr.cpp:
          Const change

Fri Jul 25 14:21:13  2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ace_qtreactor.mpc:
        * ace/ace_qt3reactor.mpc:
          Renamed qt to qt3, this builds and links the qtreactor
          with qt3

        * ace/ace_qt4reactor.mpc:
          New project for qt4

          You can set qt=1 and qt3=1 together or set qt4=1, but not
          both at the same time. Thanks to Kees van Marle
          <kvmarle at remedy dot nl> for testing qt4

Fri Jul 25 14:13:13  2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/QtReactor/QtReactor.cpp:
        * ace/QtReactor/QtReactor.h:
          Improved qt4 support

Fri Jul 25 14:09:13  2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/ace_qt3.mpb